Closed Bug 552905 Opened 14 years ago Closed 14 years ago

JS_DefineUCFunction seems to be missing a CHECK_REQUEST

Categories

(Core :: JavaScript Engine, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

(Whiteboard: fixed-in-tracemonkey)

Attachments

(1 file)

JS_DefineFunction(JSContext *cx, JSObject *obj, const char *name, JSNative call,
                  uintN nargs, uintN attrs)
{
...
    CHECK_REQUEST(cx);
...
    return js_DefineFunction(cx, obj, atom, call, nargs, attrs);
}

JS_DefineUCFunction(JSContext *cx, JSObject *obj,
                    const jschar *name, size_t namelen, JSNative call,
                    uintN nargs, uintN attrs)
{
...
    return js_DefineFunction(cx, obj, atom, call, nargs, attrs);
}
Attached patch patchSplinter Review
Attachment #433021 - Flags: review?(jorendorff)
Attachment #433021 - Flags: review?(jorendorff) → review+
http://hg.mozilla.org/mozilla-central/rev/99f1e94c77a3
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: