Bug 552905 - JS_DefineUCFunction seems to be missing a CHECK_REQUEST. r=jorendorff.